--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   role_name: haproxy
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Manage haproxy
   company: N/A
   license: BSD
   min_ansible_version: 2.0
@@ -10,5 +10,11 @@ galaxy_info:
     - name: FreeBSD
       versions:
         - 12.0
+    - name: OpenBSD
+      versions:
+        - 6.9
+    - name: Ubuntu
+      versions:
+        - focal
   galaxy_tags:
-    - system
+    - haproxy
