--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,5 +16,8 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - focal
+    - name: Fedora
+      versions:
+        - 35
   galaxy_tags:
     - haproxy
