--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,19 @@
 ---
 # tasks file for ansible-role-haproxy
 
-- name: "Include {{ ansible_os_family }}.yml"
-  include_vars: "{{ ansible_os_family }}.yml"
+- name: "Include OS-specific variables"
+  include_vars: "{{ lookup('first_found', params) }}"
+  vars:
+    params:
+      files:
+        # XXX ansible version on OpenBSD 6.9 does not have
+        # ansible_distribution_major_version. defaults to
+        # ansible_distribution_version.
+        - "{{ ansible_distribution }}-{{ ansible_distribution_major_version | default(ansible_distribution_version) }}.yml"
+        - "{{ ansible_distribution }}.yml"
+        - "{{ ansible_os_family }}.yml"
+      paths:
+        - vars
 
 - name: Do fail when haproxy_x509_certificate is used
   fail:
