bugfix: install policycoreutils-python-utils on Fedora
required by spec

--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -13,6 +13,7 @@
     name:
       - python3-libselinux
       - python3-policycoreutils
+      - policycoreutils-python-utils
   when:
     - ansible_distribution == 'Fedora'
 
